--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>ticker</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
+
 <body>
-<div id="app"></div>
-<script src="./src/main.ts" type="module"></script>
+    <div id="app"></div>
+    <script src="./src/main.ts" type="module"></script>
 </body>
+
 </html>
